force-app/main/default/objects/CampaignMember/fields/I_ST_ACS_Channel__c.field-meta.xml
<CustomField>
    <fullName>I_ST_ACS_Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile (SMS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>