force-app/main/default/objects/CampaignMember/fields/I_ST_External_ID__c.field-meta.xml
<CustomField>
    <fullName>I_ST_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>