force-app/main/default/objects/CampaignMember/fields/I_ST_Status__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>